# florida_tax_rag

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  RETRIEVAL_ANALYSIS.md  SCRAPING_NOTES.md  SUMMARY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  engineering_plan.md  pyproject.toml  railway.json
.github/workflows/: test.yml
config/: __init__.py  development.env  docker.env  production.env.template  settings.py  staging.env
config/prompts/: __init__.py  evaluation.py  generation.py  retrieval.py
data/evaluation/: README.md  baseline_claude.json  baseline_comparison.json  golden_dataset.json  margen_eval_combined.json
data/processed/: README.md
docs/: Untitled-2025-07-23-0730.excalidraw  api.md  architecture.md  blog_latency_optimization.md  configuration.md  deploy.md  deployment.md  development.md  evaluation.md  federal_tax_rag_architecture.excalidraw  latency_analysis.md  performance.md  replicating_the_tax_system.md  research_paper.md  research_paper.tex  technical_report.md  troubleshooting.md
nginx/: nginx.conf
scripts/: analyze_neo4j.py  analyze_retrieval.py  audit_raw_data.py  benchmark.py  chunk_corpus.py  consolidate_corpus.py  extract_citations.py  generate_dashboard.py  generate_embeddings.py  generate_report.py  init_neo4j.py  init_weaviate.py  load_weaviate.py  run_baseline_evaluation.py  run_evaluation.py  scrape_admin_code.py  scrape_case_law.py  scrape_statutes.py  scrape_taa.py  test_decomposition.py  test_load.py  test_retrieval.py  validate_config.py  verify_vector_store.py  visualize_agent.py  wait_for_services.py
src/: __init__.py
src/agent/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/api/: __init__.py  cache.py  dependencies.py  errors.py  main.py  middleware.py  models.py  routes.py
src/evaluation/: __init__.py  authority_metrics.py  correction_metrics.py  faithfulness.py  llm_judge.py  metrics.py  models.py  prompts.py  report.py  report_narrative.py  retrieval_analysis.py  retrieval_metrics.py  runner.py  visualizations.py
src/generation/: __init__.py  corrector.py  formatter.py  generator.py  models.py  prompts.py  validator.py
src/graph/: __init__.py  client.py  loader.py  queries.py  schema.py
src/ingestion/: __init__.py  build_citation_graph.py  chunking.py  citation_extractor.py  consolidate.py  models.py  tokenizer.py
src/observability/: __init__.py  context.py  logging.py  metrics.py  (+1 more)
streamlit_app/: app.py
tests/: __init__.py  conftest.py  test_admin_code_scraper.py  test_agent_graph.py  test_agent_integration.py  test_agent_nodes.py  test_api.py  test_api_dependencies.py  test_api_middleware.py  test_base_scraper.py  test_case_law_scraper.py  test_chunking.py  test_citation_extractor.py  test_citation_graph.py  test_consolidate.py  test_embeddings.py  test_evaluation.py  test_generation.py  test_graph_client.py  test_graph_queries.py  test_observability.py  test_query_decomposition.py  test_retrieval.py  test_retrieval_metrics.py  test_scraper_utils.py  test_statute_scraper.py  test_taa_scraper.py  test_validation.py  test_vector_client.py
(+32 files in other folders)
