[project]
name = "florida-tax-rag"
version = "0.1.0"
description = "Hybrid Agentic GraphRAG system for Florida Tax Law"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langgraph>=0.2.0",

    # Vector and Graph databases
    "weaviate-client>=4.0.0",
    "neo4j>=5.0.0",

    # Embeddings and LLM
    "voyageai>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",

    # Web scraping
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",

    # PDF processing
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",

    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Utilities
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ragas>=0.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker services)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "*/models.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 70
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
